--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/css/styles.css" />
-    <title>Cure_Life</title>
-  </head>
-  <body>
-    <div id="homepage">home page</div>
-  </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/css/styles.css">
+    <title>Document</title>
+</head>
+
+<body>
+    
+        <div class="home">
+            <button> <i class="fa-solid fa-bars"></i></button>
+
+            <button>home</button>
+            <button>sign-in</button>
+            <button>register</button>
+            <button><i class="fa-regular fa-hospital-user"></i></button>
+        </div>
+        <script src="https://kit.fontawesome.com/fd7317aaf0.js" crossorigin="anonymous"></script>
+
+</body>
+
 </html>
