--- a/index.html
+++ b/index.html
@@ -10,13 +10,29 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./src/css/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/ea9c896efe.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header id="menu-bar">
+      <div class="ham-menu">
+        <div><i class="fa-solid fa-bars"></i></div>
+        <div>HOME</div>
+      </div>
+      <div class="singin-up">
+        <div>Register</div>
+        <div>Signin</div>
+      </div>
+    </header>
+    <div class="container-fluid"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script src="./src/js/script.js"></script>
   </body>
 </html>
