changes to styles and some changes to index

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header id="menu-bar">
       <div class="ham-menu">
         <div><i class="fa-solid fa-bars"></i></div>
-        <div>HOME</div>
+        <div><a href="\">HOME</a></div>
       </div>
       <div class="singin-up">
         <div>Register</div>
