--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Cure-life</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./src/css/utils.css" />
     <link rel="stylesheet" href="./src/css/styles.css" />
     <script
       src="https://kit.fontawesome.com/ea9c896efe.js"
@@ -18,8 +19,33 @@
   </head>
   <body>
     <header id="menu-bar">
-      <div class="ham-menu">
-        <div><i class="fa-solid fa-bars"></i></div>
+      <div>
+        <div class="ham-menu">
+          <i id="ham-bar" class="fa-solid fa-bars"></i>
+        </div>
+        <div
+          id="ham-menu-box"
+          class="ham-menu-box d-flex flex-column justify-content-between align-items-center"
+        >
+          <div class="d-flex flex-row-reverse justify-content-between">
+            <div id="cross"><i class="fa-solid fa-x"></i></div>
+            <nav class="ham-menu-navbar">
+              <ul class="d-flex flex-column">
+                <li class="my-1"><a href="\">HOME</a></li>
+                <li class="my-1"><a href="\">Contact Us</a></li>
+                <li class="my-1"><a href="\">About Us</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="d-flex flex-column">
+            <button class="btn btn-lg btn-main my-1">
+              <a href="\"></a>HIRING
+            </button>
+            <button class="btn btn-lg btn-main my-1">
+              <a href="\"></a>ADMIN LOGIN
+            </button>
+          </div>
+        </div>
         <div><a href="\">HOME</a></div>
       </div>
       <div class="singin-up">
