--- a/index.html
+++ b/index.html
@@ -60,10 +60,25 @@
         <div><a href="\">HOME</a></div>
       </div>
       <div class="singin-up">
-        <div>Register</div>
-        <div>Signin</div>
+        <div>
+          <div id="register">Register</div>
+
+          <div id="registerbox" class="registerbox">
+            <div class="registername">Patient Register</div>
+            <div class="registername">Doctor Register</div>
+          </div>
+        </div>
+        <div>
+          <div id="signup">Signup</div>
+
+          <div id="signupbox" class="registerbox">
+            <div class="registername">Patient Signup</div>
+            <div class="registername">Doctor Signup</div>
+          </div>
+        </div>
       </div>
     </header>
+    <div class="modal"></div>
     <div id="main-container" class="container-fluid"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
